# genomic-publications-agent

./: .env.example  .gitignore  COORDINATES_RECOGNIZER_SUMMARY.md  LICENSE  LICENSE-DOCS  LICENSE.documentation  MIGRATION_GUIDE.md  README-pl.md  README.md  README_INFO.md  TESTS_MIGRATION_GUIDE.md  batch_process.py  check_pmids.py  check_variant_annotations.py  comprehensive_test.py  create_missing_list.py  demo.py  enhanced_output_final_data_structure.json  enhanced_output_fixed.csv_llm_temp.json  entity_analysis.json  extract_pmids.py  filtered_ground_truth.csv  final_test_summary.py  manual_debug.csv  missing_pmids.txt  model_comparison.csv  output.json  output_coordinates.csv  output_coordinates.csv_llm_temp.json  output_coordinates_data_structure.json  output_coordinates_llm_debug.csv  output_enhanced_debug.csv  output_llama3_turbo.csv  output_llama_3.1_data_structure.json  output_llama_3.1_llm_debug.csv  output_llama_3.1_raw_llm_data.json  output_llama_3.1_unified.csv  output_llama_3.1_unified_data_structure.json  output_llama_3.3_70b_unified.csv_cooccurrence_temp.json  output_llama_3.3_70b_unified_data_structure.json  (+26 more)
archive/: embeddings.py  llm.py
batch_results/: batch_1_pmids.txt  batch_1_results.csv  batch_2_pmids.txt  batch_2_results.csv  batch_3_pmids.txt  batch_3_results.csv  batch_4_pmids.txt  batch_4_results.csv  batch_5_pmids.txt  batch_5_results.csv  batch_6_pmids.txt  batch_6_results.csv  batch_7_pmids.txt  batch_7_results.csv  batch_8_pmids.txt  batch_8_results.csv
config/: config.yaml  development.yaml  production.yaml  test.yaml
docs/: README.md  (+11 more)
(+393 files in other folders)
